--- a/.github/workflows/price-checker.yml
+++ b/.github/workflows/price-checker.yml
@@ -1,28 +1,28 @@
 name: Run Price Tracker
 
 on:
-schedule:
-- cron: "0 6 * * *"
-workflow_dispatch:
+  schedule:
+    - cron: "0 6 * * *"
+  workflow_dispatch:
 
 jobs:
-run-script:
-runs-on: ubuntu-latest
+  run-script:
+    runs-on: ubuntu-latest
 
-steps:
-  - name: Checkout repo
-    uses: actions/checkout@v4
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-  - name: Setup Python
-    uses: actions/setup-python@v5
-    with:
-      python-version: "3.11"
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-  - name: Install dependencies
-    run: pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-  - name: Run script
-    env:
-      EMAIL: ${{ secrets.EMAIL }}
-      APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
-    run: python main.py
+      - name: Run script
+        env:
+          email: ${{ secrets.email }}
+          password: ${{ secrets.password }}
+        run: python main.py
